<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nimble.surveys.viewmodel.main.MainActivity">

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu"
        app:showAsAction="always" />
</menu>
