<resources>
    <string name="app_name">Surveys</string>
    <string name="menu">Menu</string>
    <string name="menu_clicked">Menu button clicked</string>

    <!-- Empty -->
    <string name="no_survey_title">No Survey</string>
    <string name="no_survey_desc">There is no survey now, please re-try it later.</string>

    <!-- Failed -->
    <string name="cannot_connect">Can\'t Connect</string>
    <string name="tab_to_retry">Tap to retry</string>

    <!-- Survey on list -->
    <string name="take_the_survey">Take the survey</string>
    
</resources>
