...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.nimble.surveys.ui.common.VerticalViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:adapter="@{vm.adapter}"
                app:indicator="@{indicator}"
                app:onPageSelected="@{vm}" />

...
